--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage ",
+    "test": "jest --coverage --forceExit --detectOpenHandles --runInBand",
     "start:dev": "nodemon index.js"
   },
   "keywords": [],
@@ -18,6 +18,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1",
+    "supertest": "^6.3.4"
   }
 }
